--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -5,13 +5,22 @@
     width: 100%;
     top: 0;
     padding: 15px 0;
-    background: get-color("primary", "white");
     z-index: 8;
 
     @include breakpoints("tablet") {
         top: 50px;
         padding: 0;
         background: transparent;
+    }
+
+    &__background {
+        position: absolute;
+        left: 0;
+        right: 0;
+        width: 100%;
+        top: 0;
+        bottom: 0;
+        background: get-color("primary", "white");
     }
 
     &__logo {
