--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -15,11 +15,9 @@
         right: 0;
         width: 100%;
         height: 2px;
-        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#dfebee+0,000000+100&0.65+0,0+100 */
-        background: -moz-radial-gradient(center, ellipse cover, rgba(223,235,238,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-        background: -webkit-radial-gradient(center, ellipse cover, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: radial-gradient(ellipse at center, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6dfebee', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+        background: -moz-linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     }
 
     @include breakpoints("tablet") {
@@ -50,7 +48,7 @@
         }
     }
 
-    @include breakpoints("tablet") { 
+    @include breakpoints("tablet") {
 
         &.-hovered {
             z-index: 9;
@@ -73,12 +71,12 @@
             }
 
 
-            .a-button, 
-            h5, 
-            p, 
+            .a-button,
+            h5,
+            p,
             .m-case-study__count {
-                color: get-color("primary", "white"); 
-                border-color: get-color("primary", "white"); 
+                color: get-color("primary", "white");
+                border-color: get-color("primary", "white");
             }
         }
     }
@@ -88,7 +86,7 @@
     }
 
     &__content {
-        width: 100%; 
+        width: 100%;
         float: none;
 
         &-inner {
@@ -99,19 +97,19 @@
         }
 
         @include breakpoints("tablet") {
-            width: 50%; 
+            width: 50%;
             float: left;
         }
     }
 
     &__image-container {
-        width: 100%; 
+        width: 100%;
         float: none;
         position: relative;
 
         @include breakpoints("tablet") {
             margin-bottom: 0;
-            width: 50%; 
+            width: 50%;
             float: right;
         }
     }
@@ -156,7 +154,7 @@
     }
 
     &__count {
-        color: get-color("neutral", "gray"); 
+        color: get-color("neutral", "gray");
         font-family: $font-secondary;
         position: absolute;
         margin-bottom: 20px;
@@ -168,13 +166,13 @@
         word-spacing: 2em;
         letter-spacing: .15em;
         display: none;
-        
+
         @include breakpoints("tablet") {
             display: block;
         }
 
         span {
-            color: get-color("neutral", "lighter-gray"); 
+            color: get-color("neutral", "lighter-gray");
         }
     }
 
@@ -192,8 +190,8 @@
 
     h5 {
         @include font-size(18px);
-        @include line-height("medium-large"); 
-        color: get-color("primary", "after-hours"); 
+        @include line-height("medium-large");
+        color: get-color("primary", "after-hours");
         font-family: $font-secondary;
         text-transform: uppercase;
         letter-spacing: 0.2em;
@@ -205,8 +203,8 @@
     }
 
     p {
-        @include font-size(42px); 
-        @include line-height(48px); 
+        @include font-size(42px);
+        @include line-height(48px);
         margin: 0 0 16px 0;
 
         @include breakpoints("tablet") {
