--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -20,12 +20,18 @@
 
         .o-hero__copy-container {
             @include span-col(12);
-            @include font-size(20px);
-            font-weight: 300;
+            @include font-size(14px);
+            @include line-height(24px);
+
+            letter-spacing: .35px;
+            font-weight: 100;
 
             @include breakpoints("tablet") {
                 @include span-col(9);
                 @include font-size(36px);
+
+                font-weight: 300;
+                line-height: normal;
 
                 position: relative;
                 top: -8px;
@@ -64,7 +70,17 @@
         }
 
         .o-hero__title {
-            padding-top: 160px;
+            padding-top: 104px;
+
+            h1 {
+                @include font-size(44px);
+                @include line-height(48px);
+
+                @include breakpoints("tablet") {
+                    @include font-size(54px);
+                    @include line-height(54px);
+                }
+            }
 
             @include breakpoints("tablet") {
                 padding-top: 300px;
