Fixing MObile styles.

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -395,6 +395,9 @@
                 }
 
                 &.-feed-lockup {
+                    @include span-col(10);
+                    margin: 48px auto 16px;
+
                     @include breakpoints("tablet") {
                         left: 212px;
                         position: absolute;
