--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -4,8 +4,150 @@
         box-shadow: none !important;
     }
 
+    &__pull-scroll {
+        position: relative;
+
+        .pull-scroll {
+            position: relative;
+            width: 100%;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+            transition: all 0.2s;
+            transform: scale(0.98);
+            will-change: transform;
+            user-select: none;
+            cursor: pointer;
+            -ms-overflow-style: none;  /* Internet Explorer 10+ */
+            scrollbar-width: none;  /* Firefox */
+
+            &.-active {
+                cursor: grabbing;
+                cursor: -webkit-grabbing;
+                transform: scale(1);
+            }
+        }
+
+        &:before {
+            content: 'Pull';
+            display: block;
+            position: absolute;
+            left: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: get-color("secondary", "pink");
+            border-radius: 50%;
+            width: 90px;
+            height: 90px;
+            color: get-color("primary", "white");
+            text-transform: uppercase;
+            font-weight: 600;
+            text-align: center;
+            line-height: 90px;
+        }
+
+        img {
+            display: inline-block;
+        }
+    }
+
     &__mosaic {
         position: relative;
+
+        .o-rhythm__container {
+            position: relative;
+        }
+
+        &.-hackerone {
+            padding: 100px 0 0 0;
+
+            @include breakpoints("tablet") {
+                padding: 0;
+            }
+
+            .-dots {
+                position: absolute;
+                right: 0;
+                top: 40px;
+                display: none;
+
+                @include breakpoints("tablet") {
+                    display: block;
+                }
+
+                &.-left {
+                    left: -100px;
+                    right: auto;
+                    top: -40px;
+                }
+            }
+
+            .-sticker {
+                position: absolute;
+                display: none;
+                top: 42%;
+                left: 50%;
+
+                @include breakpoints("tablet") {
+                    display: block;
+                }
+            }
+
+            .-banner {
+                position: absolute;
+                top: -180px;
+                right: 40px;
+                display: none;
+                z-index: -1;
+
+                @include breakpoints("tablet") {
+                    display: block;
+                }
+            }
+
+            .-poster {
+
+            }
+
+            .-sticker-one {
+                position: absolute;
+                top: -180px;
+                right: 3%;
+                display: none;
+
+                @include breakpoints("tablet") {
+                    display: block;
+                }
+            }
+
+            .-sticker-two {
+                position: absolute;
+                width: 200px;
+                left: 0;
+                top: -100px;
+
+                @include breakpoints("tablet") {
+                    left: 60px;
+                    bottom: -160px;
+                    top: auto;
+                }
+            }
+
+            .-skateboard {
+                position: relative;
+                right: 0;
+                bottom: -40%;
+                top: -80px;
+
+                @include breakpoints("tablet") {
+                    position: absolute;
+                    left: 60px;
+                    bottom: -160px;
+                    top: auto;
+                    right: auto;
+                }
+            }
+        }
 
         .-float {
             position: absolute;
@@ -246,6 +388,7 @@
 
             &__right {
                 position: relative;
+                padding-right: 10px;
 
                 &:after {
                     content: '';
@@ -256,7 +399,7 @@
                     vertical-align: top;
                     margin-right: 10px;
                     position: absolute;
-                    right: -18px;
+                    right: -10px;
                 }
             }
         }
@@ -343,6 +486,7 @@
             display: block;
             max-width: 100%;
             margin: 0 auto;
+            width: 100%;
 
             @include breakpoints("tablet") {
                 max-width: 99999px;
@@ -452,4 +596,8 @@
             }
         }
     }
+}
+
+.pull-scroll::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
 }
