--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -34,7 +34,7 @@
     &__container {
         @include clearfix();
         position: relative;
-        padding: 0 0 80px 0;
+        padding: 80px 0;
         background: get-color("primary", "after-hours");
 
         &.-light {
@@ -48,7 +48,7 @@
             font-weight: 600;
 
             @include breakpoints("tablet") {
-                margin: 118px 0 80px;
+                margin: 0 0 80px;
             }
         }
 
