adding next case study links

--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -7,6 +7,13 @@
     background: white;
     z-index: 0;
 
+    &.m-case-study-page-content__next {
+
+        &:before {
+            display: none;
+        }
+    }
+
     &:before {
         content: '';
         position: absolute;
