--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -44,6 +44,7 @@
             font-weight: 600;
             text-align: center;
             line-height: 90px;
+            z-index: 9;
         }
 
         img {
@@ -518,24 +519,86 @@
     }
 
     &__next {
-        background: get-color("neutral", "gray");
-        padding: 40px 0 80px 0;
+        display: flex;
 
         @include breakpoints("tablet") {
-            padding: 157px 0 335px 0;
+            display: block;
+
+            &:hover {
+
+                .-background-image {
+                    -ms-transform: scale(1.2);
+                    -moz-transform: scale(1.2);
+                    -webkit-transform: scale(1.2);
+                    -o-transform: scale(1.2);
+                    transform: scale(1.2);
+                }
+
+                .-content {
+                    background-color: get-color("secondary", "center-lane");
+
+                    p,
+                    h5,
+                    .a-button {
+                        color: get-color("primary", "white");
+                        border-color: get-color("primary", "white");
+                    }
+                }
+            }
         }
 
-        h6,
-        h2 {
-            color: get-color("primary", "white");
-        }
-
-        h6 {
-            margin-bottom: 20px;
+        .-background-image {
+            transition: all 0.6s ease;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
 
             @include breakpoints("tablet") {
-                margin-bottom: 60px;
+                display: block;
             }
+
+            &__container {
+
+            }
+        }
+
+        .-background-image__container,
+        .-content {
+            flex: none;
+            overflow: hidden;
+            position: relative;
+
+            @include breakpoints("tablet") {
+                flex: 1;
+            }
+        }
+
+        .-content {
+            width: 94%;
+            margin: 0 auto;
+            padding: 60px 0;
+            background-color: transparent;
+            transition: background-color .6s linear;
+            -moz-transition: background-color .6s linear;
+            -webkit-transition: background-color .6s linear;
+            -ms-transition: background-color .6s linear;
+
+            @include breakpoints("tablet") {
+                padding: 180px 80px;
+            }
+        }
+
+        h5 {
+            margin-bottom: 20px;
+        }
+
+        p {
+            margin-bottom: 60px;
         }
     }
 
