--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -27,6 +27,11 @@
         display: block;
         float: left;
         width: 50px;
+        perspective: 200px;
+        transition: opacity .4s cubic-bezier(.165,.84,.44,1);
+        mix-blend-mode: difference;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
 
         @include breakpoints("tablet") {
             width: 60px;
