--- a/src/assets/scss/00_base/_settings.scss
+++ b/src/assets/scss/00_base/_settings.scss
@@ -64,6 +64,7 @@ $breakpoints: (
     "lg-laptop":  980px,
     "sm-desktop": 1080px,
     "desktop":    1180px,
+    "lg-desktop": 1450px,
 );
 $font-sizes: (
     "largest":      85px,
