--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -4,12 +4,16 @@
     }
 
     .o-hero {
+
         &__titles {
             margin-top: 40px;
-            padding-left: 0;
 
-            @include breakpoints("tablet") {
+            @include breakpoints("sm-desktop") {
                 margin-top: 0;
+            }
+
+            @include breakpoints("lg-desktop") {
+                padding-left: 0;
             }
 
             h2 {
@@ -47,12 +51,19 @@
     }
 
     .o-hero__subtitles {
+
         @include breakpoints("tablet") {
             font-weight: 100;
             letter-spacing: 0px;
-            padding-left: 0;
+            margin-left: 0;
+        }
 
+        @include breakpoints("sm-desktop") {
             margin-left: 800px;
+        }
+
+        @include breakpoints("lg-desktop") {
+            padding-left: 0;
         }
 
         h3 {
