--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -36,6 +36,10 @@
         transition: all 0.6s ease;
         display: none;
 
+        &.-top {
+            height: 180px;
+        }
+
         @include breakpoints("tablet") {
             display: block;
         }
@@ -73,7 +77,7 @@
 
         &.-hovered {
             z-index: 9;
-            margin-top: -90px;
+            margin-top: -20px;
 
             .m-case-study__block {
                 height: 200px;
@@ -111,7 +115,6 @@
         float: none;
 
         &-inner {
-            padding-left: 0;
 
             @include breakpoints("tablet") {
                 padding-left: 80px;
@@ -119,6 +122,10 @@
 
             @include breakpoints("sm-desktop") {
                 padding-left: 160px;
+            }
+
+            @include breakpoints("lg-desktop") {
+                padding-left: 0;
             }
         }
 
