--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -22,7 +22,6 @@
             @include span-col(12);
             @include font-size(14px);
             @include line-height(24px);
-
             letter-spacing: .35px;
             font-weight: 100;
 
@@ -123,6 +122,7 @@
     }
 
     &__top {
+        @include clearfix();
         margin-bottom: 84px;
         padding-top: 240px;
 
@@ -133,33 +133,12 @@
     }
 
     &__titles {
-        margin-top: 60px;
         max-width: 800px;
         width: 100%;
-
-        @include breakpoints("tablet") {
-            margin-top: 60px;
-            padding-left: 80px;
-        }
-
-        @include breakpoints("sm-desktop") {
-            padding-left: 160px;
-        }
     }
 
     &__subtitles {
         max-width: 100%;
-        width: 100%;
-
-        @include breakpoints("tablet") {
-            width: 800px;
-            max-width: calc(100% - 160px);
-            padding-left: 80px;
-        }
-
-        @include breakpoints("sm-desktop") {
-            padding-left: 160px;
-        }
     }
 
     &__background {
@@ -283,7 +262,7 @@
     }
 
     h3 {
-        margin: 0 0 80px 0;
+        margin: 40px 0 80px 0;
 
         @include breakpoints("tablet") {
             margin: 0 0 280px 0;
@@ -309,8 +288,8 @@
 
     p {
         position: relative;
+        float: right;
         max-width: 144px;
-        margin-left: 50px;
         margin-top: 40px;
         z-index: 1;
 
