--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -20,19 +20,17 @@
 
         .o-hero__copy-container {
             @include span-col(12);
-            @include font-size(14px);
+            @include font-size(16px);
             @include line-height(24px);
 
-            letter-spacing: .35px;
+            letter-spacing: .04em;
             font-weight: 100;
 
             @include breakpoints("tablet") {
                 @include span-col(9);
                 @include font-size(36px);
 
-                font-weight: 300;
                 line-height: normal;
-
                 position: relative;
                 top: -8px;
             }
@@ -43,7 +41,10 @@
             padding: 0;
 
             li {
+                @include line-height(24px);
                 margin-bottom: 1em;
+                font-weight: 100;
+                letter-spacing: .04em;
             }
 
             &-container {
@@ -83,6 +84,7 @@
             }
 
             @include breakpoints("tablet") {
+                @include span-col(6);
                 padding-top: 300px;
             }
         }
