--- a/src/assets/scss/02_molecule/_careers.scss
+++ b/src/assets/scss/02_molecule/_careers.scss
@@ -1,15 +1,18 @@
 .m-careers {
-    background: get-color("primary", "after-hours");
     padding-bottom: 120px;
 
     @include breakpoints("tablet") {
         padding-bottom: 200px;
     }
 
+    &__container {
+        background: get-color("primary", "after-hours");
+    }
+
     &__left {
         @include span-col(12);
 
-        @include breakpoints("tablet") {
+        @include breakpoints("sm-desktop") {
             @include span-col(4);
         }
     }
@@ -18,7 +21,7 @@
         @include span-col(12);
         margin-top: 40px;
 
-        @include breakpoints("tablet") {
+        @include breakpoints("sm-desktop") {
             @include span-col(8);
             margin-top: 0;
         }
