--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -65,9 +65,17 @@
     }
 
     &__directions {
-        @include breakpoints("tablet") {
-            @include span-col(8);
-        }
+        @include span-col(12);
+        max-width: 786px;
+        width: calc(100% - 80px);
+
+        // @include breakpoints("tablet") {
+        //     @include span-col(12);
+        // }
+
+        // @include breakpoints("sm-desktop") {
+        //     @include span-col(8);
+        // }
 
         p {
             @include line-height(32px);
