--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -34,13 +34,9 @@
     &__container {
         @include clearfix();
         position: relative;
-        padding: 80px 0;
         background: get-color("primary", "after-hours");
+        margin: 80px 0;
         padding-left: 0;
-
-        @include breakpoints("tablet") {
-            padding-left: 80px;
-        }
 
         &.-light {
             background: get-color("primary", "white");
