--- a/src/assets/scss/03_organism/_slider.scss
+++ b/src/assets/scss/03_organism/_slider.scss
@@ -1,10 +1,6 @@
 .o-slider {
     position: relative;
 
-    @include breakpoints("tablet") {
-        height: 354px;
-    }
-
     &__container {
         margin-bottom: 120px;
     }
@@ -22,9 +18,17 @@
         z-index: 1;
     }
 
-    @include breakpoints("tablet") {
-        height: 986px;
-    }
+    // @include breakpoints("tablet") {
+    //     height: 986px;
+    //     width: 80%;
+    //     left: 14%;
+    // }
+
+    // @include breakpoints("lg-desktop") {
+    //     height: 986px;
+    //     width: 100%;
+    //     left: 0;
+    // }
 
     .o-rhythm__container {
         padding: 0;
