fixing next case study area

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -548,10 +548,10 @@
     }
 
     &__next {
-        display: flex;
+        display: block;
 
         @include breakpoints("tablet") {
-            display: block;
+            display: flex;
 
             &:hover {
 
@@ -619,6 +619,7 @@
 
             @include breakpoints("tablet") {
                 padding: 180px 80px;
+                width: auto;
             }
         }
 
