--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -644,7 +644,7 @@
             width: 94%;
             margin: 0 auto;
             padding: 60px 0;
-            background-color: transparent;
+            background-color: rgba(245,245,245,1);
             transition: background-color .6s linear;
             -moz-transition: background-color .6s linear;
             -webkit-transition: background-color .6s linear;
