fixing janky arrow

--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -11,7 +11,7 @@
         top: 50px;
         padding: 0;
         background: transparent;
-        mix-blend-mode: difference;
+        mix-blend-mode: multiply;
     }
 
     &__background {
